--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#EASYBROKER SERVICE
+spring.application.name=easybroker-service
+server.port=8080
+server.servlet.context-path=/EasyBroker
 
+#EASYBROKER CONFIG
+api.url = https://api.stagingeb.com/v1/properties
+api.key = l7u502p8v46ba3ppgvj5y2aad50lb9
